improved layout. model and dissmisable alrams for user_wizard

--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -263,6 +263,6 @@
     </section> -->
     {%endblock%}
     {%block scripts%}
-    <script src="../static//js/jquery_3_4_1_min.js"></script>
+    <!-- <script src="../static//js/jquery_3_4_1_min.js"></script> -->
     <script src="../static//js/Functions_Definitions.js"></script>
     {%endblock%}
