--- a/Source/templates/db_conn_wizard.html
+++ b/Source/templates/db_conn_wizard.html
@@ -105,6 +105,6 @@
   </div>
 </div>
 {% endblock %} {% block scripts%}
-<script src="../static//js/jquery_3_4_1_min.js"></script>
+<!-- <script src="../static//js/jquery_3_4_1_min.js"></script> -->
 <script src="../static/js/db_conn_wizard.js"></script>
 {% endblock %}
