--- a/Source/templates/display_results.html
+++ b/Source/templates/display_results.html
@@ -34,6 +34,6 @@
 {% endblock %}
 
 {%block scripts%}
-    <script src="../static/js/jquery_3_4_1_min.js"></script>
+    <!-- <script src="../static/js/jquery_3_4_1_min.js"></script> -->
     <script src="../static/js/display_results.js"></script>
 {%endblock%}
