--- a/Source/static/css/layout_style.css
+++ b/Source/static/css/layout_style.css
@@ -5,7 +5,8 @@
 }
 
 .octopus-img {
-    width: 8%;
+    width: 50px;
+    /* object-fit: scale-down; */
   }
 
 h6 {
@@ -17,7 +18,7 @@ h6 {
   margin: 0 10px 0;
 }
 
-#brand-image {
-  max-width:10%;
-}
+/* #window-title-div{
+  margin: auto;
+} */
 
