--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -132,7 +132,7 @@
                       <label>Function Location</label>
                       <div class="custom-file input-group">
                         <input class="custom-file-input" type="file" id="functionLocation" name="location" aria-describedby="myInput">
-                        <label class="custom-file-label" for="myInput">Choose file</label>
+                        <label class="custom-file-label" id="functionLocationLabel" for="myInput">Choose file</label>
                       </div>
 
                     </div>
