--- a/Source/templates/Function_Definition.html
+++ b/Source/templates/Function_Definition.html
@@ -130,10 +130,13 @@
                   <div class="row">
                     <div class="function-input-row col-10">
                       <label>Function Location</label>
+                      <input class="form-control" type="text" id="functionLocation" name="Location"></input>
+
+                      <!-- 
                       <div class="custom-file input-group">
                         <input class="custom-file-input" type="file" id="functionLocation" name="location" aria-describedby="myInput">
                         <label class="custom-file-label" id="functionLocationLabel" for="myInput">Choose file</label>
-                      </div>
+                      </div> -->
 
                     </div>
                   </div>
