--- a/Source/templates/layout.html
+++ b/Source/templates/layout.html
@@ -106,9 +106,14 @@
         </nav>
       </div>
     </section>
-    <div class="container-fluid"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="container-fluid">
     {%block content%}
     {% endblock %}
+    </div>
   </div>
 
  
