process stage, run stage, complex net and complex net htmls added

--- a/Source/static/css/metadata_layout.css
+++ b/Source/static/css/metadata_layout.css
@@ -4,6 +4,11 @@
     margin-right: 10px;
     background-color: whitesmoke;
     width: 25%;
+    height: 700px;
+}
+
+.margins-bottom-medium{
+    margin-bottom: 20px;
 }
 .meta_data label{
     margin-top: 10px;
