--- a/Source/templates/metadata_layout.html
+++ b/Source/templates/metadata_layout.html
@@ -10,9 +10,10 @@
 {% endblock %}
 
 {%block content%}
+    
     <div class="row mx-auto layout-buttons-div">
         <input type="checkbox" checked data-toggle="toggle" data-on="New" data-off="Existing" data-onstyle="primary" data-offstyle="secondary">
-        <a href="" role="button"><i class="far fa-save normal-size"></i></a>
+        <a href="" role="button" aria-label="Save"><i class="far fa-save normal-size" ></i></a>
         <a href="" role="button"><i class="far fa-file-alt adapt-icon-size"></i></a>
         <a href="" role="button"><i class="far fa-trash-alt adapt-icon-size"></i></a>
     </div>
@@ -20,7 +21,8 @@
         
         <div class="meta_data card border-secondary">
             <div class="card-body">
-                <div class="row">
+                
+                <div class="row margins-bottom-medium">
                     <div class="col-8">
                         <label for="meta_name"><h5>Name</h5></label>
                         <input type="text" class="form-control" id="meta_name"> 
@@ -31,15 +33,32 @@
                     </div>
                 </div>
                 {% if session['current_window_name']=='Define Stage' %}
-                <label for="meta_concequences"><h5>Concequences</h5></label>
-                <input type="text" class="form-control" id="meta_concequences">
+                <div class="row margins-bottom-medium">
+                    <div class="col-6">
+                        <label for="meta_type"><h5>Type</h5></label>
+                        <select class="form-control" id="meta_type">
+                            <option value="Run System">Run System</option>
+                            <option value="Analyse">Analyse</option>
+                        </select>
+                    </div>
+                    <div class="col-6">
+                        <label for="meta_concequences"><h5>Concequences</h5></label>
+                        <select class="form-control" id="meta_concequences">
+                            <option value="Critical">Critical</option>
+                            <option value="Warning">Warning</option>
+                            <option value="Light">Light</option>
+                            <option value="None">None</option>
+                        </select>
+                    </div>
+                </div>
                 {% endif %}
                 <label for="meta_owner"><h5>Owner</h5></label>
-                <input type="text" class="form-control" id="meta_owner">
+                <input type="text" class="form-control margins-bottom-medium" id="meta_owner">
                 <label for="meta_tags"><h5>Tags</h5></label>
-                <input type="text" class="form-control" id="meta_tags">
+                <input type="text" class="form-control margins-bottom-medium" id="meta_tags">
                 <label for="meta_description"><h5>Description</h5></label>
-                <textarea class="form-control" name="" id="meta_description" cols="10" rows="2"></textarea>
+                <textarea class="form-control margins-bottom-medium" name="" id="meta_description" cols="10" rows="2"></textarea>
+                <h6><i>changed date : 16:00 27.5.2020</i></h6>
             </div>
             
         </div>
