--- a/Source/templates/run_stage_definition.html
+++ b/Source/templates/run_stage_definition.html
@@ -5,6 +5,11 @@
 {% endblock %}
 
 {% block main_form %}
+    <div class="form-inline">
+      <h2 class="mx-auto stage-headline displayInline"> Run System Stage</h2>
+      <a href="" role="button" class = "displayInline medium-margin-right medium-icon" ><i class="fas fa-check-circle green-control"></i></a>
+    </div>
+    <hr>
     <div class="row main-selectors-div stage-def-inputs">
         <div class="col-2">
             <label for="site_select"><h5>Site</h5></label>
@@ -22,16 +27,20 @@
                 <option value="Site3"></option>
             </select>
         </div>
-        <div class="col-3">
-            <label for="site_config"><h5>Configuration</h5></label>
-            <select name="" id="site_config" class="form-control">
-                <option value="Site1"></option>
-                <option value="Site2"></option>
-                <option value="Site3"></option>
-            </select>
+        <div class="col-4">
+            <label for="site_config"><h5>Configuration</h5> </label>
+            <div class="form-inline">
+              <select name="" id="site_config" class="form-control col-8">
+                  <option value="Site1"></option>
+                  <option value="Site2"></option>
+                  <option value="Site3"></option>
+              </select>
+              <a href="" role="button" class = "displayInline" ><i class="far fa-eye samll-margin"></i></a>
+              <a href="" role="button" class = "displayInline" ><i class="fas fa-network-wired samll-margin"></i></a>
+            </div>
         </div>
-        <a href="" role="button" class = "displayInline" ><i class="fas fa-network-wired"></i></a>
-</div>
+        
+    </div>
 
 <div class="row stage-def-inputs marginCard">
 
@@ -46,21 +55,28 @@
 
         </div>
 
-        <div class="col-3">
-            <label for="scenario_file_name"><h5>Scenario File</h5></label>
+        <div class="col-7">
+          <label for="scenario_file_name"><h5>Scenario File</h5></label>
+          <div class="form-inline">
             <input list="scenario_file_dl" type="text" name="" id="scenario_file_name" class="form-control">
-            <datalist id="scenario_file_dl">
-                <option value="scenario1"></option>
-                <option value="scenario2"></option>
-                <option value="scenario3"></option>
-            </datalist>
+            <div class="form-check-inline extra-margin">
+                <label><h5></h5></label>
+                <input type="checkbox" class="form-check-input" id="run_all_cb">
+                <label class="form-check-label" for="run_all_cb"><h5>Run All Scenarios</h5></label>
+            </div>
+          </div>
+          <datalist id="scenario_file_dl">
+              <option value="scenario1"></option>
+              <option value="scenario2"></option>
+              <option value="scenario3"></option>
+          </datalist>
         </div>
 
-        <div class="col-3 form-check">
+        <!-- <div class="col-3 form-check">
             <label><h5></h5></label>
             <input type="checkbox" class="form-check-input" id="run_all_cb">
             <label class="form-check-label" for="run_all_cb"><h6>Run All Scenarios</h6></label>
-        </div>
+        </div> -->
 </div>
 
 <div class="row stage-def-inputs marginCard">
@@ -75,9 +91,12 @@
           </datalist>
         </div>
 
-        <div class="col-3">
+        <div class="col-5">
           <label for="DP_file"><h5>DP File</h5></label>
-          <input list="dp_file_dl" type="text" name="" id="DP_file" class="form-control">
+          <div class="form-inline">
+            <input list="dp_file_dl" type="text" name="" id="DP_file" class="form-control">
+            <button hidden="hidden"></button>
+          </div>
           <datalist id="dp_file_dl">
               <option value="dp1"></option>
               <option value="dp2"></option>
@@ -88,29 +107,27 @@
 </div>
 
 <div class="row stage-def-inputs marginCard">
-
         <div class = "col-5">
           <label for="ovr_file"><h5>ovr File</h5></label>
-            <input list="ovr_file_dl" type="text" name="" id="ovr_file" class="form-control">
-            <datalist id="ovr_file_dl">
-                <option value="ovr_file1"></option>
-                <option value="ovr_file2"></option>
-                <option value="ovr_file3"></option>
-            </datalist>
+            <div class="form-inline">
+              <input list="ovr_file_dl" type="text" name="" id="ovr_file" class="form-control col-10">
+              <datalist id="ovr_file_dl">
+                  <option value="ovr_file1"></option>
+                  <option value="ovr_file2"></option>
+                  <option value="ovr_file3"></option>
+              </datalist>
 
-            <a href="" role="button" class = "displayInline" ><i class="far fa-eye"></i></a>
+              <a href="" role="button" class = "displayInline samll-margin" ><i class="far fa-eye"></i></a>
+            </div>
         </div>
-
         <!-- <div class="row stage-def-inputs"> -->
-        <div class="col-3">
+        <div class="col-5">
             <label for=""><h5>Run time [min]</h5></label>
-            <input type="text" class="form-control">
-        </div>
-
-        <div class="col-2" dir="ltr">
-          <button class="btn btn-secondary btn-block"  data-toggle="modal" data-target="#Adnvaced_defintions_modal">
-          <i class="fas fa-arrow-right"></i><h6>&NonBreakingSpace; Advanced</h6></button>
-
+            <div class = "form-inline">
+              <input type="text" class="form-control">
+              <button class="btn btn-secondary btn-sm rightmost-control"  data-toggle="modal" data-target="#Adnvaced_defintions_modal">
+              <i class="fas fa-arrow-right"></i><h6>&NonBreakingSpace; Advanced</h6></button>
+            </div>
         </div>
 
 </div>
@@ -124,36 +141,44 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title" id="exampleModalLongTitle">Advanced Run Setting</h5>
+              <a href="" role="button" class="ml-3 mt-1"><i class="far fa-sync-alt"></i></a>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body" id=delete_user_modal_body>
-                <div class="col-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="userAutoCmd_cb">
-                    <label class="form-check-label" for="userAutoCmd_cb"><h6>Auto User Cmd</h6></label>
-                    <input list="autoUserCmd_File_dl" type="text" name="" id="DP_file" class="form-control displayInline">
-                    <datalist id="autoUserCmd_File_dl">
-                        <option value="AutoUserCmd_File1"></option>
-                        <option value="AutoUserCmd_File2"></option>
-                        <option value="AutoUserCmd_File3"></option>
-                    </datalist>
-                    <a href="" role="button"><i class="far fa-eye"></i></a>
+                <div class="form-inline">
+                  <div class="form-check">
+                    <input type="checkbox" class="form-check-input mt-2" id="userAutoCmd_cb">
+                    <label class="form-check-label align-form-label" for="userAutoCmd_cb"><h6>Auto User Cmd</h6></label>
+                  </div>
+                  <input list="autoUserCmd_File_dl" type="text" name="" id="DP_file" class="form-control displayInline mr-3">
+                  <datalist id="autoUserCmd_File_dl">
+                      <option value="AutoUserCmd_File1"></option>
+                      <option value="AutoUserCmd_File2"></option>
+                      <option value="AutoUserCmd_File3"></option>
+                  </datalist>
+                  <a href="" role="button"><i class="far fa-eye"></i></a>
                 </div>
-
-                <div class="col-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="useFMC_cb">
-                    <label class="form-check-label" for="useFMC_cb"><h6>use FMC</h6></label>
+                <div class="form-inline">
+                  <div class="mr-3 form-check mb-auto mt-2">
+                      <input type="checkbox" class="form-check-input mt-2" id="useFMC_cb">
+                      <label class="form-check-label" for="useFMC_cb"><h6>use FMC</h6></label>
+                  </div>
+                  <div>
+                    Config file: <input class="form-control" type="text" name="" id="fmc_config_file_input"><br>
+                    Connections file: <input class="form-control" type="text" name="" id="fmc_connections_file_input"><br>
+                    Scenario file: <input class="form-control" type="text" name="" id="fmc_scenario_file_input"><br>
+                  </div>
                 </div>
-
-                <div class="col-10 form-check">
-                    <input type="checkbox" class="form-check-input" id="turnDownEnv_cb">
-                    <label class="form-check-label" for="turnDownEnv_cb"><h6>Turn Down Env After: </h6></label>
-                    <input type="text" class="form-control displayInline">
-
+                <div class="form-inline">
+                  <div class="form-check">
+                      <input type="checkbox" class="form-check-input mt-2" id="turnDownEnv_cb">
+                      <label class="form-check-label align-form-label" for="turnDownEnv_cb"><h6>Turn Down Env After: </h6></label>
+                  </div>
+                  <input type="text" class="form-control displayInline mr-2">
+                  <h6>Min</h6>
                 </div>
-
-
 
             </div>
             <div class="modal-footer">
