--- a/Source/templates/run_simple.html
+++ b/Source/templates/run_simple.html
@@ -33,7 +33,7 @@
                         
                     </div>
                 </div>
-                <!-- <div>
+                <div>
                     <h1>DRAG AND DROP</h1>
                     <div class="list">
                         <input list='some_datalist' type="text" class="input" placeholder="Add items in your list"/>
@@ -52,7 +52,7 @@
                         <li class="draggable" draggable="true">PHP</li>
                         <li class="draggable" draggable="true">MySQL</li>
                     </ul>
-                </div> -->
+                </div>
             </div>
             <div class="my-2">
                 <label for="run_ids_list">selected run ids:</label>   
