--- a/Source/static/css/define_complex_net.css
+++ b/Source/static/css/define_complex_net.css
@@ -37,15 +37,17 @@
 }
 
 .card-header{
-    background-color: rgb(11, 58, 212);
+    background-color: rgb(80, 80, 80);
     color: white;
+    font-weight: bold;
 }
 
 .seperator{
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
+    color: chocolate;
 }
 
 .seperator .fas{
