--- a/Source/static/css/draggable_list.css
+++ b/Source/static/css/draggable_list.css
@@ -1,8 +1,8 @@
 body .list {
-    position: relative;
-    width: 250px;
-    margin: 0px auto;
-    display: block;
+    /* position: relative;*/
+    /* width: 250px;  */
+    margin: 0 0 0 30px;
+    display: inline-block;
   }
   body .list ::-webkit-input-placeholder {
     color: #cecece;
@@ -43,7 +43,7 @@ body .list {
     font-family: "Raleway", sans-serif;
     font-weight: 800;
     height: 50px;
-    list-style-type: none;
+    list-style-type: decimal;
     margin: 10px;
     background-color: white;
     color: #212121;
@@ -53,7 +53,8 @@ body .list {
     cursor: move;
     transition: all 200ms;
     user-select: none;
-    margin: 10px auto;
+    margin-left: 25px;
+    /* margin: 10px auto; */
     position: relative;
   }
   body ul .draggable:after {
